# observability-demo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  main.py
aws-lambda-based/: README.md
aws-lambda-based/app/: Dockerfile  app.py
digitalocean/: README.md
docs/: stack_overview.md  tools.md
grafana/scripts/: upload_dashboard.py
shared/: README.md
shared/grafana/: README.md
shared/otel/: otel-collector-config.yaml
shared/prometheus/: prometheus.yml
